@startuml PokerGame
skinparam classAttributeIconSize 0

class Card {
  - value : int
  - suit : string
  {static} Suits : string[]
  {static} Values : int[]
  + Card(value : int, suit : string)
  + GetValue() : int
  + GetSuit() : string
  + ToString() : string
}

class Deck {
  - cards : List<Card>
  + RemainingCards : int
  + Deck()
  - InitializeDeck() : void
  + Shuffle() : void
}

class GameController {
  + WinLoss : bool
  + Deck : Deck
  + Table : List<Card>
  + GameController()
  + SubmitSelection(selectedCards : List<Card>) : void
  + ValidateSelection(selectedCards : List<Card>) : bool
  + CheckEndState() : void
}

class Program

Card <.. Deck : uses
Deck o-- Card : contains
GameController *-- Deck
GameController *-- "0..*" Card : Table
Program ..> Card
Program ..> Deck
@enduml